--- a/my-vue2-element-project/package.json
+++ b/my-vue2-element-project/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.8.1",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
+    "mockjs": "^1.1.0",
     "speak-tts": "^2.0.8",
     "vue": "^2.6.14"
   },
